added mainPage style, also added to resource icons, stringnames and fonts for future pages)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="title_status">Status</string>
     <string name="button_feed">Feed</string>
     <string name="button_add">Add</string>
+    <string name="app_title">BYTE MANAGER</string>
+
 </resources>
